# template-slack-chatbot

./: .env.sample  .gitignore  README.md  blaxel.toml  pyproject.toml
docs/: SLACK_SETUP.md
src/: __main__.py  agent.py  main.py  slack_integration.py  slack_router.py  slack_security.py
src/server/: middleware.py
