[project]
name = "template-slack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "blaxel[googleadk,telemetry]==0.2.39",
    "fastapi[standard]>=0.115.12",
    "rich>=13.9.4",
    "slack-sdk>=3.31.0",
]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
